--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "prototype-name",
-  "description": "Prototype",
+  "name": "consent-prototype",
+  "description": "Consent prototype",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -8,7 +8,7 @@
     "node": ">=16.0.0"
   },
   "prototype": {
-    "serviceName": "Your service name",
+    "serviceName": "Give consent for a vaccination",
     "defaultRigLayout": "layouts/default.html"
   },
   "stylelint": {
