--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "prototype": {
     "serviceName": "Give or refuse consent for vaccinations",
-    "defaultRigLayout": "layouts/default.html"
+    "defaultRigLayout": "layouts/default.html",
+    "defaultUnbrandedLayout": "layouts/unbranded.html"
   },
   "stylelint": {
     "extends": "stylelint-config-gds/scss"
@@ -29,7 +30,7 @@
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "luxon": "^3.3.0",
-    "nhsuk-prototype-rig": "^0.0.4",
+    "nhsuk-prototype-rig": "^0.0.5",
     "npm-run-all": "^4.1.5",
     "rollup": "^3.18.0",
     "rollup-plugin-copy": "^3.4.0",
